--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^12.12.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "json-server": "^0.15.1",
     "tslint-config-airbnb": "^5.11.2",
