--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^12.12.2",
+    "axios": "^1.6.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
