--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,7 @@
     // "types": [],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,
+    "allowJs": true,
     "types": ["node"]
   }
 }
