--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
       - DB_HOST=postgres
       - DB_NAME=zerodha_db
       - DB_PASSWORD=zerodha_password
+      - POSTBACK_URL=http://localhost:8100/api/z-postback
+      - WEBSOCKET_RESTART_URL=http://localhost:8100/restart-websocket
     depends_on:
       - postgres
   postgres:
     image: postgres:latest
-    container_name: postgres-container
+    container_name: sandbox-db
     environment:
       POSTGRES_DB: zerodha_db
       POSTGRES_USER: db_user
